[project]
name = "celery-queue-exporter"
version = "0.1.0"
description = "A Prometheus exporter for monitoring Celery queue metrics"
readme = "README.md"
requires-python = ">=3.9.19"
license = "MIT"
authors = [{ name = "ithaquakr", email = "ithadev.nguyen@gmail.com" }]
keywords = ["celery", "prometheus", "exporter", "monitoring", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Monitoring",
]
dependencies = ["prometheus-client>=0.22.1"]

[tool.ruff]
target-version = "py39"

[dependency-groups]
dev = ["celery>=5.5.3", "ruff>=0.11.12"]
