[project]
name = "celery-queue-exporter"
version = "0.1.0"
description = "A Prometheus exporter for monitoring Celery queue metrics"
readme = "README.md"
requires-python = ">=3.9.19"
license = "MIT"
authors = [{ name = "ithaquakr", email = "ithadev.nguyen@gmail.com" }]
keywords = ["celery", "prometheus", "exporter", "monitoring", "metrics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: System :: Monitoring",
]
dependencies = ["pika>=1.3.2", "prometheus-client>=0.22.1", "redis>=6.2.0"]

[tool.ruff]
target-version = "py39"

[dependency-groups]
dev = ["ruff>=0.11.12"]
example = [
    "celery>=5.3.4",
    "fastapi>=0.104.1",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "redis>=5.0.1",
    "uvicorn>=0.24.0",
]
